# vendor_openvalley

./: CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md
niobeu4/: BUILD.gn  NOTICE  config.json  ohos.build
niobeu4/applications/: BUILD.gn  Kconfig.liteos_m.applications
niobeu4/applications/001_quick_start/: .application_config  BUILD.gn  README_zh.md  hello_world.c
niobeu4/applications/002_system_los_thread/: .application_config  BUILD.gn  README_zh.md  os_thread_example.c
niobeu4/applications/003_system_los_timer/: .application_config  BUILD.gn  README_zh.md  os_timer_example.c
niobeu4/applications/004_system_los_event/: .application_config  BUILD.gn  README_zh.md  os_event_example.c
niobeu4/applications/005_system_los_mutex/: .application_config  BUILD.gn  README_zh.md  os_mutex_example.c
niobeu4/applications/006_system_los_semp/: .application_config  BUILD.gn  README_zh.md  os_semp_example.c
niobeu4/applications/007_system_los_message/: .application_config  BUILD.gn  README_zh.md  os_message_example.c
niobeu4/demo/: BUILD.gn  Kconfig.liteos_m.applications
niobeu4/demo/701_multi_device_location/: .application_config  BUILD.gn
niobeu4/demo/701_multi_device_location/framework/: multi_device_location_impl.c  test.c
niobeu4/demo/701_multi_device_location/framework/device_control/ble/: multi_device_location_ble_control.c  multi_device_location_ble_control.h
niobeu4/demo/701_multi_device_location/framework/network/: package_request_data.c  package_request_data.h
niobeu4/demo/701_multi_device_location/framework/utils/: multi_device_location_base_data.h  multi_device_location_error.h
niobeu4/demo/701_multi_device_location/interface/: multi_device_location_api.h
niobeu4/hdf_config/: BUILD.gn  hdf.hcs
niobeu4/kernel_configs/: debug.config
niobeu4_xts/: BUILD.gn  config.json  ohos.build
niobeu4_xts/hdf_config/: BUILD.gn  hdf.hcs
niobeu4_xts/kernel_configs/: debug.config
(+79 files in other folders)
